--- a/page2.html
+++ b/page2.html
@@ -8,10 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
 	<script src="./js/jquery-2.1.0.min.js"></script>
@@ -20,6 +20,7 @@
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
 	<title>page2</title>
+
 
 
 	<!-- Analytics -->
@@ -47,8 +48,6 @@
 					<ul class="site-navigation nav navbar-nav">
 						<li>
 							<a href="index.html">Accueil</a>
-						</li>
-						<li>
 						</li>
 						<li>
 							<a href="page2.html">page2</a>
@@ -115,9 +114,11 @@
 				</div>
 				<div class="col-sm-6">
 					<p>
-						contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
-						au vendredi<br>
+						contact@lachouetteagence.com
 					</p>
+					<p>2 place Sathonay 69001 Lyon</p>
+					<p>Ouvert de 9h à 18h, du lundi
+						au vendredi</p>
 				</div>
 			</div>
 		</div>
