--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<title>Contact | La chouette agence</title>
+	<meta name="keywords" content="agence design">
+	<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -19,7 +20,6 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-	<title>page2</title>
 
 
 
