--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<a href="index.html">Accueil</a>
 						</li>
 						<li>
-							<a href="page2.html">page2</a>
+							<a href="contact.html">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -68,7 +68,7 @@
 						alt="Logo de La chouette agence" />
 					<h1 class="text-center hero-bloc-text tc-white ">La chouette agence.</h1>
 					<div class="text-center">
-						<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+						<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 							id="cta-hero">Contact</a>
 					</div>
 				</div>
@@ -150,7 +150,7 @@
 						d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
 						Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement
 						trouvable sur les moteurs de recherche.</p>
-						<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>
+						<a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a>
 					
 				</div>
 			</div>
@@ -232,7 +232,7 @@
 					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 				</h2>
 				<div class="col-sm-12 text-center">
-					<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+					<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
