--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-
 	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-
-
 
 	<!-- Analytics -->
 
@@ -85,27 +82,28 @@
 					<form id="form_1" novalidate success-msg="Your message has been sent."
 						fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 						<div class="form-group">
-							<label>
+							<label for="name">
 								Nom
 							</label>
 							<input id="name" class="form-control" required />
 						</div>
 						<div class="form-group">
-							<label>
+							<label for="email">
 								Adresse email
 							</label>
 							<input id="email" class="form-control" type="email" required />
 						</div>
 						<div class="form-group">
-							<label>
+							<label for="input_504">
 								Comment nous avez-vous connu ?
 							</label>
 							<input class="form-control" type="email" required id="input_504" />
 						</div>
 						<div class="form-group">
-							<label>
+							<label for="message">
 								Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-							</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+							</label>
+							<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 						</div>
 						<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 							Envoyer
@@ -160,8 +158,6 @@
 		</div>
 	</div>
 	<!-- Footer - bloc-8 END -->
-
-
 
 </body>
 
